Added create default formats and currencies in admin router.
